--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@mui/x-date-pickers": "^6.15.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "font-awesome": "^4.7.0",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
@@ -23,6 +25,7 @@
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
